k8s/foundry/development/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tz-wrapped-frontend
  namespace: tz-wrapped
  annotations:
    kubernetes.io/ingress.class: 'nginx'
    cert-manager.io/cluster-issuer: 'letsencrypt-prod'
spec:
  tls:
    - hosts:
        - tz-wrapped-frontend.dev.gke.papers.tech
      secretName: tz-wrapped-frontend-dev-tls
  rules:
    - host: tz-wrapped-frontend.dev.gke.papers.tech
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: tz-wrapped-frontend
                port:
                  number: 80
